# task-api

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  docker-compose.yml  reset_db.sh  test.sh
migrations/: 20251025071632_initial_schema.sql  20251028040730_task_dependencies_and_audit.sql
scripts/: test.sh  test_audit.sh  test_dependencies.sh
src/: config.rs  error.rs  main.rs  state.rs
src/database/: audit_repo.rs  dependency_repo.rs  mod.rs
src/handlers/: audit.rs  auth.rs  dependencies.rs  health.rs  mod.rs  tasks.rs
src/middleware/: auth.rs
src/models/: audit.rs  auth.rs  dependency.rs  mod.rs  task.rs  user.rs
src/utils/: jwt.rs
