[package]
name = "task_api"
version = "0.1.0"
edition = "2024"

[dependencies]
#Web framework
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Utilities
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

#Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"
